Add some details

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="home-info padd-15">
                     <h3 class="hello">Hello, my name is <span class="name">Nike Fernandez</span></h3>
                     <h3 class="my-profession">I' m a <span class="typing">Web Designer</span></h3>
-                    <p>Im a student of Kodego at the philippines., who is always curious to learn and build new things.<br>
+                    <p>Im a student of Kodego at the Philippines. Who is always curious to learn and build new things.<br>
                             I like checking out open source projects to expand my knowledge.<br>
                             I am passionate about investing and I'm planning to share my experiences on a blog later on.</p>
                     <a href="#contact" class="btn hire-me">Hire Me</a>
