--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <div class="portfolio-item-inner shadow-dark">
                         <div class="portfolio-img">
                             <p>Coding Journal Activity</p>
-                            <a href="https://nikegfernandez.github.io/liveliwood.io/">My Coding Journal</a>
+                            <a href="https://nikegfernandez.github.io/mycodingjournal.io/">My Coding Journal</a>
                             <img src="images/codingjournal.PNG" alt="">
                         </div>
                     </div>
